# raft-in-rust

./: .env.example  .gitignore  Cargo.toml  readme.md
raft_app/: Cargo.toml
raft_app/src/: app_mod.rs  main.rs
raft_app/src/domain/dispatcher/: mod.rs
raft_app/src/infrastructure/: infra_bootstrap.rs  logging.rs  mod.rs
raft_app/src/transport/: mod.rs  router.rs
raft_app/src/transport/app_router/: balance_payload.rs  balance_router.rs  helloworld_router.rs  mod.rs
raft_app/src/transport/cluster_rpc/: raft_rpc_outbound_network.rs
raft_app/src/transport/helloworld/: payload.rs
raft_app/src/transport/rpc/: mod.rs  raft_rpc_inbound_network.rs
raft_core/: Cargo.toml
raft_core/benches/: pubsub_benchmark.rs
raft_core/src/: lib.rs  log.rs  network.rs  rpc.rs  state.rs
raft_core/src/channel/: message.rs  mod.rs  payload.rs  request_reply_channel.rs  signal.rs
