[package]
name = "raft_app"
version = "0.1.0"
edition = "2024"

[dependencies]
raft_core = { path = "../raft_core" }
async-trait = "0.1"
env_logger = "0.11.3"
futures = "0.3.31"
hyper = "1.6.0"
log = "0.4.27"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["cors"] }
axum = "0.8.3"
shaku = "0.6.2"
dotenv = "0.15.0"
