[package]
name = "raft_core"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.77"
env_logger = "0.11.3"
futures = "0.3.31"
hyper = "1.6.0"
log = "0.4.27"
rand = "0.9.0"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "pubsub_benchmark"
harness = false
